--- a/index.html
+++ b/index.html
@@ -471,7 +471,118 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <form for="user-email" class="footer-label">Subscribe</form>
+          <div class="footer-form-input-wrap">
+            <label>
+              <input
+                class="footer-input"
+                name="user-email"
+                id="user-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <div class="form-button-wrap">
+              <button type="submit" class="footer-form-btn">Subscribe</button>
+              <svg class="footer-form-icon" width="24" height="28">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="close-btn">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="form-label">Name</label>
+
+            <div class="modal-input-wrap">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                placeholder=""
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tel" class="form-label">Phone</label>
+
+            <div class="modal-input-wrap">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                placeholder=""
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="form-label">Email</label>
+
+            <div class="modal-input-wrap">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                placeholder=""
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-text" class="form-label">Comment</label>
+
+            <div class="modal-input-wrap">
+              <textarea
+                class="model-form-textarea"
+                name="user-text"
+                id="user-text"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="policy"
+              id="policy"
+              class="modal-check visually-hidden"
+              value="true"
+            />
+            <label for="policy" class="modal-check-text"
+              ><span class="modal-checkbox">
+                <svg class="modal-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="modal-form-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
