--- a/index.html
+++ b/index.html
@@ -472,9 +472,10 @@
           </ul>
         </div>
         <div class="footer-form">
-          <form for="user-email" class="footer-label">Subscribe</form>
-          <div class="footer-form-input-wrap">
-            <label>
+          <p class="footer-label">Subscribe</p>
+
+          <form class="footer-form-input-wrap">
+            <label class="footer-label-1">
               <input
                 class="footer-input"
                 name="user-email"
@@ -484,16 +485,18 @@
               />
             </label>
             <div class="form-button-wrap">
-              <button type="submit" class="footer-form-btn">Subscribe</button>
-              <svg class="footer-form-icon" width="24" height="28">
-                <use href="./images/icons.svg#icon-telegram"></use>
-              </svg>
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </button>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
@@ -551,13 +554,13 @@
             </div>
           </div>
           <div class="modal-field">
-            <label for="user-text" class="form-label">Comment</label>
+            <label for="user-comment" class="form-label">Comment</label>
 
             <div class="modal-input-wrap">
               <textarea
                 class="model-form-textarea"
-                name="user-text"
-                id="user-text"
+                name="user-comment"
+                id="user-comment"
                 placeholder="Text input"
               ></textarea>
             </div>
@@ -565,12 +568,12 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               class="modal-check visually-hidden"
               value="true"
             />
-            <label for="policy" class="modal-check-text"
+            <label for="user-privacy" class="modal-check-text"
               ><span class="modal-checkbox">
                 <svg class="modal-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
