--- a/index.html
+++ b/index.html
@@ -570,15 +570,15 @@
               class="modal-check visually-hidden"
               value="true"
             />
-            <label for="user-privacy" class="modal-check-text"
-              ><span class="modal-checkbox">
+            <label for="user-privacy" class="modal-check-text">
+              <span class="modal-checkbox">
                 <svg class="modal-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="" class="modal-checkbox-link">Privacy Policy</a></label
-            >
+              <a href="" class="modal-checkbox-link">Privacy Policy</a>
+            </label>
           </div>
           <button type="submit" class="modal-form-btn">Send</button>
         </form>
